name:               servant-jsaddle-streams
version:            0.18

license:            BSD3
license-file:       LICENSE
author:             Servant Contributors
copyright:
  2014-2016 Zalora South East Asia Pte Ltd, 2016-2017 Servant Contributors

category:           Servant, Web
build-type:         Simple
cabal-version:      >=1.10

extra-source-files:
  README.md

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
    Servant.Client.JSaddle

  -- Bundled with GHC: Lower bound to not force re-installs
  -- text and mtl are bundled starting with GHC-8.4
  build-depends:
      base
    , bytestring    >=0.10.8.1 && <0.11
    , containers    >=0.5.7.1  && <0.7
    , kan-extensions
    , lens
    , mtl           >=2.2.2    && <2.3
    , text          >=1.2.3.0  && <1.3
    , transformers  >=0.5.2.0  && <0.6

  if impl(ghcjs -any)
    build-depends: ghcjs-base

  -- Servant dependencies.
  -- Strict dependency on `servant-client-core` as we re-export things.
  build-depends:    servant             >=0.18 && <0.19
  build-depends:    servant-client-core >=0.18 && <0.19
  build-depends:
      base-compat         >=0.10.5  && <0.12
    , case-insensitive    >=1.2.0.0 && <1.3
    , exceptions          >=0.10.0  && <0.11
    , ghcjs-dom           >=0.9.4.0 && <0.10
    , http-media          >=0.7.1.3 && <0.9
    , http-types          >=0.12.2  && <0.13
    , jsaddle             >=0.9.6.0 && <0.10
    , monad-control       >=1.0.2.3 && <1.1
    , semigroupoids       >=5.3.1   && <5.4
    , string-conversions  >=0.3     && <0.5
    , transformers-base   >=0.4.4   && <0.5

  if impl(ghc >=8.0)
    ghc-options: -Wno-redundant-constraints

test-suite spec
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Spec.hs

  if impl(ghcjs -any)
    build-depends:
        base
      , servant-jsaddle-streams

  else
    other-modules:      Servant.Client.JSaddleSpec

    -- Dependencies inherited from the library. No need to specify bounds.
    build-depends:
        base
      , bytestring
      , containers
      , exceptions
      , ghcjs-dom
      , http-media
      , http-types
      , jsaddle
      , mtl
      , process
      , semigroupoids
      , servant
      , servant-client-core
      , servant-jsaddle-streams
      , servant-server
      , string-conversions
      , text
      , time
      , wai
      , wai-cors
      , wai-extra
      , warp
      , websockets

    -- Additonal dependencies
    build-depends:
        aeson
      , hspec
      , jsaddle-warp
      , QuickCheck
